Fixes to plume track config

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "where is there data? every timestep of HFR data is not always complete, so we need to know what nan points were supposed to have data and which ones were never meant to have data.\n",
     "\n",
-    "A good way to find this out is to take several slices of data over a long period of time and check the coverage of each timestamp. This is a good way to see the true coverage of HFR."
+    "A good way to find this out is to take several slices of data over a long period of time and check the coverage of each timestamp. This is the easiest way to kind of see the true coverage of HFR."
    ]
   },
   {
@@ -117,12 +117,20 @@
     "#         \"lon_range\": (-117.565, -116.9924),\n",
     "#         \"include_range_endpoints\": False\n",
     "#     },\n",
+    "    # {\n",
+    "    #     \"name\": \"hunington_latest\",\n",
+    "    #     \"code\": ThreddsCode.USWC_6KM_HOURLY,\n",
+    "    #     \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
+    "    #     \"lat_range\": (32, 34.2),\n",
+    "    #     \"lon_range\": (-119, -117.4),\n",
+    "    #     \"include_range_endpoints\": True\n",
+    "    # },\n",
     "    {\n",
-    "        \"name\": \"hunington_latest\",\n",
-    "        \"code\": ThreddsCode.USWC_6KM_HOURLY,\n",
-    "        \"time_range\": (\"2021-10-01T00\", \"2021-10-10T00\"),\n",
-    "        \"lat_range\": (32, 34.2),\n",
-    "        \"lon_range\": (-119, -117.4),\n",
+    "        \"name\": \"tj_plume_1km_2020-02\",\n",
+    "        \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
+    "        \"time_range\": (\"2020-02-09T01:00\", \"2020-02-14T01:00\"),\n",
+    "        \"lat_range\": (32.11093, 32.73124),\n",
+    "        \"lon_range\": (-117.565, -116.9924),\n",
     "        \"include_range_endpoints\": True\n",
     "    },\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
@@ -179,10 +187,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+  },
   "kernelspec": {
    "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
