--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -59,8 +59,8 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    # \"plume_track.json\",\n",
-    "    \"tijuana_now.json\",\n",
+    "    \"plume_track.json\",\n",
+    "    # \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
     "#     \"dummy_sim.json\",\n",
