Generalize thredds data loading

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -133,6 +133,15 @@
     "        \"lon_range\": (-117.565, -116.9924),\n",
     "        \"include_range_endpoints\": True\n",
     "    },\n",
+    "    {\n",
+    "      \"name\": \"hycom_mwbproj\",\n",
+    "      \"code\": ThreddsCode.DATA_HYCOMFORE,\n",
+    "      \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
+    "      \"lat_range\": (22, 45),\n",
+    "      \"lon_range\": (273, 295),\n",
+    "      \"include_range_endpoints\": False\n",
+    "    },\n",
+    "    # stuff below here hasn't been updated with the new format\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
@@ -178,7 +187,7 @@
    "source": [
     "for i, r in enumerate(regions):\n",
     "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
-    "    filename = f\"{r['name']}_{region_data[i]['code']}.nc\"\n",
+    "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
     "    print(f\"saved to {save_dir / filename}\")\n",
