Fix notebooks to work with hycom data and new code

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -34,7 +34,8 @@
     "import xarray as xr\n",
     "\n",
     "import src.utils as utils\n",
-    "from src.parcels_utils import HFRGrid, read_netcdf_info, rename_dataset_vars\n",
+    "from src.thredds_utils import rename_dataset_vars\n",
+    "from src.parcels_utils import HFRGrid, read_netcdf_info\n",
     "from src.parcels_sim import ParcelsSimulation\n",
     "from src.parcels_analysis import add_feature_set_to_result\n",
     "from src.plot_features import BuoyPathFeature\n",
@@ -60,6 +61,7 @@
    "source": [
     "configs = [\n",
     "    \"plume_track.json\",\n",
+    "    \"mwb.json\",\n",
     "    # \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
@@ -120,6 +122,7 @@
     "sims = []\n",
     "for i, cfg in enumerate(loaded_configs):\n",
     "    name = cfg.get(\"name\", os.path.splitext(os.path.basename(configs[i]))[0])\n",
+    "    print(f\"Preparing simulation {name}\")\n",
     "    sim = ParcelsSimulation(name, grids[i], cfg[\"parcels_config\"])\n",
     "    sims.append(sim)"
    ]
@@ -203,8 +206,9 @@
     "\n",
     "for i, sim in enumerate(sims):\n",
     "    cfg = loaded_configs[i]\n",
-    "    postprocess_cfg = cfg[\"postprocess_config\"]\n",
-    "    handle_postprocessing(sim.parcels_result, postprocess_cfg)\n",
+    "    postprocess_cfg = cfg.get(\"postprocess_config\", None)\n",
+    "    if postprocess_cfg not in empty:\n",
+    "        handle_postprocessing(sim.parcels_result, postprocess_cfg)\n",
     "    sim.parcels_result.write_data(override=True)\n",
     "    if cfg[\"save_snapshots\"]:\n",
     "        plotting_cfg = cfg[\"plotting_config\"]\n",
