--- a/run_mwbGS.ipynb
+++ b/run_mwbGS.ipynb
@@ -35,16 +35,15 @@
     "import time\n",
     "import numpy as np\n",
     "import xarray as xr\n",
-    "import utils\n",
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from parcels_utils import xr_dataset_to_fieldset, HFRGrid, read_netcdf_info\n",
-    "from constants import *\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid, read_netcdf_info\n",
+    "from src.constants import *\n",
     "\n",
-    "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_analysis import *\n",
-    "from hycom_utils import HYCOMGrid"
+    "from src.parcels_sim import ParcelsSimulation\n",
+    "from src.parcels_analysis import *\n",
+    "import src.utils as utils"
    ]
   },
   {
@@ -66,17 +65,18 @@
    "source": [
     "currentname = 'current_netcdfs/hycom_mwbproj.nc'\n",
     "projname = 'mwb_trajectories'\n",
-    "# lon0 = -81; lat0 = 24.25;\n",
+    "# lon0 = -81\n",
+    "# lat0 = 24.25\n",
     "configname = \"mwb.json\"\n",
-    "spawnpointfile = 'spawn_points_mats/seeds_keywest.mat';\n",
+    "spawnpointfile = 'spawn_points_mats/seeds_keywest.mat'\n",
     "tend = 'END'\n",
-    "repeat_dt = 10800;\n",
-    "simulation_dt = 300;\n",
-    "snapshot_interval = 3600;\n",
+    "repeat_dt = 10800\n",
+    "simulation_dt = 300\n",
+    "snapshot_interval = 3600\n",
     "\n",
     "\n",
     "# ADJUST FOR DESIRED FORECAST:\n",
-    "tstart = '2021-08-25T21:00';\n",
+    "tstart = '2022-03-29T03:00'\n",
     "repeat_N = 2"
    ]
   },
@@ -93,7 +93,9 @@
    "id": "26303a9f",
    "metadata": {},
    "source": [
-    "## RUN PARCELS"
+    "## RUN PARCELS\n",
+    "\n",
+    "You can make extra adjustments to the configuration in this cell if needed."
    ]
   },
   {
@@ -107,10 +109,10 @@
     "    configname\n",
     "]\n",
     "\n",
-    "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
+    "# modify config based on settings in the notebook\n",
     "loaded_configs[0][\"name\"] = projname\n",
-    "loaded_configs[0][\"netcdf_path\"][\"path\"] = currentname\n",
+    "loaded_configs[0][\"netcdf_data\"][\"ocean\"][\"path\"] = currentname\n",
     "loaded_configs[0][\"parcels_config\"][\"spawn_points\"] = {\"path\": spawnpointfile}\n",
     "loaded_configs[0][\"parcels_config\"][\"time_range\"] = [tstart, tend]\n",
     "loaded_configs[0][\"parcels_config\"][\"repeat_dt\"] = repeat_dt\n",
@@ -121,8 +123,8 @@
     "\n",
     "grids = []\n",
     "for cfg in loaded_configs:\n",
-    "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
-    "    grids.append(HYCOMGrid(ds))\n",
+    "    ds = read_netcdf_info(cfg[\"netcdf_data\"][\"ocean\"])\n",
+    "    grids.append(HFRGrid(ds))\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
@@ -160,10 +162,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+  },
   "kernelspec": {
    "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
