Refactors to retrieve thredds data

--- a/access_thredds_hycom.ipynb
+++ b/access_thredds_hycom.ipynb
@@ -52,7 +52,7 @@
     "import numpy as np\n",
     "\n",
     "import src.utils as utils\n",
-    "from src.thredds_utils import ThreddsCode, get_thredds_dataset, retrieve_thredds_dataset"
+    "from src.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "# thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].attrs[\"_CoordinateAxisType\"] = \"Time\"\n",
     "# thredds_data[thredds_utils.DATA_HYCOMFORE][\"tau\"].attrs[\"units\"] = \"hours since \" + thredds_data[thredds_utils.DATA_HYCOMFORE][\"tau\"].time_origin\n",
     "\n",
-    "hycom_data = retrieve_thredds_dataset(ThreddsCode.DATA_HYCOMFORE)"
+    "hycom_data = retrieve_dataset(ThreddsCode.DATA_HYCOMFORE)"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
-    "    dataset = get_thredds_dataset(\n",
+    "    dataset = slice_dataset(\n",
     "        rd[\"code\"], rd[\"time_range\"], rd[\"lat_range\"],\n",
     "        rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
     "    )\n",
@@ -229,10 +229,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+  },
   "kernelspec": {
    "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
