--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -32,7 +32,7 @@
     "import xarray as xr\n",
     "\n",
     "import src.utils as utils\n",
-    "from src.thredds_utils import ThreddsCode, get_thredds_dataset\n",
+    "from src.thredds_utils import ThreddsCode, slice_dataset, retrieve_dataset\n",
     "from src.parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -131,7 +131,8 @@
     "        \"time_range\": (\"2020-02-09T01:00\", \"2020-02-14T01:00\"),\n",
     "        \"lat_range\": (32.11093, 32.73124),\n",
     "        \"lon_range\": (-117.565, -116.9924),\n",
-    "        \"include_range_endpoints\": True\n",
+    "        \"include_range_endpoints\": True,\n",
+    "        \"generate_mask\": True\n",
     "    },\n",
     "    {\n",
     "      \"name\": \"hycom_mwbproj\",\n",
@@ -170,13 +171,27 @@
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
-    "    dataset = get_thredds_dataset(\n",
+    "    dataset = slice_dataset(\n",
     "        rd[\"code\"], rd[\"time_range\"], rd[\"lat_range\"],\n",
     "        rd[\"lon_range\"], inclusive=rd[\"include_range_endpoints\"]\n",
     "    )\n",
     "    new_reg = {\"name\": rd[\"name\"], \"dataset\": dataset}\n",
     "    regions.append(new_reg)\n",
-    "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
+    "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")\n",
+    "    if rd.get(\"generate_mask\", False):\n",
+    "        # automatically generate a mask\n",
+    "        full = retrieve_dataset(rd[\"code\"])\n",
+    "        hours = (full[\"time\"].max() - full[\"time\"].min()) / np.timedelta64(1, \"h\")\n",
+    "        # 50 equal timesteps, should be a good enough sample to show coverage right?\n",
+    "        step = int(hours / 50)\n",
+    "        mask = slice_dataset(\n",
+    "            rd[\"code\"], time_range=(full[\"time\"].min().values, full[\"time\"].max().values, step),\n",
+    "            lat_range=rd[\"lat_range\"], lon_range=rd[\"lon_range\"],\n",
+    "            inclusive=rd[\"include_range_endpoints\"]\n",
+    "        )\n",
+    "        new_reg = {\"name\": f\"{rd['name']}_mask\", \"dataset\": mask}\n",
+    "        regions.append(new_reg)\n",
+    "        print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
    ]
   },
   {
