Generalize data loading even more

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -126,22 +126,22 @@
     "    #     \"include_range_endpoints\": True\n",
     "    # },\n",
     "    {\n",
-    "        \"name\": \"tj_plume_1km_2020-02\",\n",
+    "        \"name\": \"tj_plume_1km_2020-03\",\n",
     "        \"code\": ThreddsCode.USWC_1KM_HOURLY,\n",
-    "        \"time_range\": (\"2020-02-09T01:00\", \"2020-02-14T01:00\"),\n",
+    "        \"time_range\": (\"2020-03-09T01:00\", \"2020-03-14T01:00\"),\n",
     "        \"lat_range\": (32.11093, 32.73124),\n",
     "        \"lon_range\": (-117.565, -116.9924),\n",
     "        \"include_range_endpoints\": True,\n",
     "        \"generate_mask\": True\n",
     "    },\n",
-    "    {\n",
-    "      \"name\": \"hycom_mwbproj\",\n",
-    "      \"code\": ThreddsCode.DATA_HYCOMFORE,\n",
-    "      \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
-    "      \"lat_range\": (22, 45),\n",
-    "      \"lon_range\": (273, 295),\n",
-    "      \"include_range_endpoints\": False\n",
-    "    },\n",
+    "    # {\n",
+    "    #   \"name\": \"hycom_mwbproj\",\n",
+    "    #   \"code\": ThreddsCode.DATA_HYCOMFORE,\n",
+    "    #   \"time_range\": (np.datetime64(\"now\") - np.timedelta64(1, \"D\"), np.datetime64(\"now\") + np.timedelta64(7, \"D\")),\n",
+    "    #   \"lat_range\": (22, 45),\n",
+    "    #   \"lon_range\": (273, 295),\n",
+    "    #   \"include_range_endpoints\": False\n",
+    "    # },\n",
     "    # stuff below here hasn't been updated with the new format\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
