--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -61,7 +61,8 @@
    "source": [
     "configs = [\n",
     "    \"plume_track.json\",\n",
-    "    \"mwb.json\",\n",
+    "    \"plume_track_live.json\",\n",
+    "    # \"mwb.json\",\n",
     "    # \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
     "#     \"hunington_all.json\",\n",
@@ -76,7 +77,8 @@
     "    gapfiller = Gapfiller.load_from_config(*ocean_cfg.get(\"gapfill_steps\", []))\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
     "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
-    "    fields=[]\n",
+    "    fields = []\n",
+    "    # load alongshore current data if it exists\n",
     "    if cfg[\"netcdf_data\"].get(\"alongshore\", None) not in empty:\n",
     "        coast_ds = read_netcdf_info(cfg[\"netcdf_data\"][\"alongshore\"])\n",
     "        fu = Field.from_xarray(\n",
@@ -89,6 +91,7 @@
     "        fv.units = Geographic()\n",
     "        fuv = VectorField(\"CUV\", fu, fv)\n",
     "        fields = [fuv]\n",
+    "    # set boundary condition of fields\n",
     "    if bound_cond is None:\n",
     "        print(\":)\")\n",
     "        grids.append(HFRGrid(ds, fields=fields))\n",
@@ -102,6 +105,7 @@
     "        ))\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid boundary condition {bound_cond}\")\n",
+    "    # load wind data if it exists\n",
     "    wind_data = cfg[\"netcdf_data\"].get(\"wind\", None)\n",
     "    if wind_data not in empty:\n",
     "        wind_ds = rename_dataset_vars(wind_data[\"path\"])\n",
@@ -220,7 +224,6 @@
     "            land=plotting_cfg.get(\"draw_coasts\", False),\n",
     "            figsize=(13, 8)\n",
     "        )\n",
-    "        # comment out the generate_gif line if it doesn't work\n",
     "        try:\n",
     "            print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))\n",
     "        except FileNotFoundError:\n",
