Some minor tweaks to alongshore configs

--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -28,9 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
-    "coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
-    "output_file = \"current_netcdfs/socal_alongshore.nc\"\n",
+    "# velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"hunington_latest_ThreddsCode.USWC_6KM_HOURLY.nc\"\n",
+    "# coastline_mat = utils.MATLAB_DIR / \"socal_boundary.mat\"\n",
+    "# output_file = \"current_netcdfs/socal_alongshore.nc\"\n",
+    "velocity_field_nc = utils.CURRENT_NETCDF_DIR / \"tj_plume_1km_2020-03.nc\"\n",
+    "coastline_mat = utils.MATLAB_DIR / \"coastline.mat\"\n",
+    "output_file = \"current_netcdfs/tijuana_alongshore.nc\"\n",
     "# 1 km resolution values\n",
     "lat_diff = 0.00898933\n",
     "lon_diff = 0.01042175"
@@ -303,7 +306,7 @@
    "source": [
     "from parcels import Field, VectorField\n",
     "from parcels.tools.converters import GeographicPolar, Geographic\n",
-    "from src.parcels_utils import rename_dataset_vars, xr_dataset_to_fieldset\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset\n",
     "\n",
     "fu = Field.from_xarray(ds[\"U\"], \"CU\", dict(lat=\"lat\", lon=\"lon\", time=\"time\"), interp_method=\"nearest\")\n",
     "fu.units = GeographicPolar()\n",
@@ -324,10 +327,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
+  },
   "kernelspec": {
    "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3-parcels"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
