--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -60,7 +60,8 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
+    "    # \"plume_track.json\",\n",
+    "    \"plume_track_alongshore.json\",\n",
     "    # \"plume_track_live.json\",\n",
     "    # \"mwb.json\",\n",
     "    # \"tijuana_now.json\",\n",
