--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "import src.utils as utils\n",
-    "from src.runner import prep_sim_from_cfg, process_results"
+    "import src.runner as runner"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
     "sims = []\n",
     "for cfg in loaded_configs:\n",
-    "    sims.append(prep_sim_from_cfg(cfg))"
+    "    sims.append(runner.prep_sim_from_cfg(cfg))"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "for cfg, sim in zip(loaded_configs, sims):\n",
-    "    process_results(sim, cfg)"
+    "    runner.process_results(sim, cfg)"
    ]
   }
  ],
