Move many folders around, rename some of them

--- a/gapfill_example.ipynb
+++ b/gapfill_example.ipynb
@@ -37,7 +37,7 @@
    ],
    "source": [
     "import src.utils as utils\n",
-    "from src.parcels_utils import HFRGrid, read_netcdf_info\n",
+    "from src.parcels_utils import SurfaceGrid, read_netcdf_info\n",
     "from src.parcels_sim import ParcelsSimulation\n",
     "from src.gapfilling import Gapfiller\n",
     "\n",
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "grid = HFRGrid(ds)\n",
+    "grid = SurfaceGrid(ds)\n",
     "sim1 = ParcelsSimulation(\"none\", grid, cfg[\"parcels_config\"])\n",
     "sim1.pset.show(field=\"vector\",domain=domain)"
    ]
@@ -138,10 +138,10 @@
       "http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\n",
       "total invalid values on target data: 63477\n",
       "Attempting to interpolate 63477 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.HFRGrid object at 0x7feff8254450>: 32844\n",
+      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7feff8254450>: 32844\n",
       "    values filled: 30633\n",
       "Attempting to interpolate 32844 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.HFRGrid object at 0x7feff83cf0d0>: 5482\n",
+      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7feff83cf0d0>: 5482\n",
       "    values filled: 27362\n",
       "total invalid values on interpolated: 5482\n",
       "Detected latitude key as yf\n",
@@ -167,8 +167,8 @@
    ],
    "source": [
     "gapfiller = Gapfiller.load_from_config(ocean_cfg.get(\"gapfill_steps\", [])[0])\n",
-    "ds2 = gapfiller.execute(HFRGrid(ds))\n",
-    "grid2 = HFRGrid(ds2)\n",
+    "ds2 = gapfiller.execute(SurfaceGrid(ds))\n",
+    "grid2 = SurfaceGrid(ds2)\n",
     "sim2 = ParcelsSimulation(\"interped\", grid2, cfg[\"parcels_config\"])\n",
     "sim2.pset.show(field=\"vector\",domain=domain)"
    ]
@@ -195,10 +195,10 @@
       "Retrieving thredds dataset...\n",
       "total invalid values on target data: 63477\n",
       "Attempting to interpolate 63477 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.HFRGrid object at 0x7ff01b7a5690>: 32844\n",
+      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7ff01b7a5690>: 32844\n",
       "    values filled: 30633\n",
       "Attempting to interpolate 32844 points...\n",
-      "total invalid values after interpolation with <src.parcels_utils.HFRGrid object at 0x7ff01b6a0950>: 5482\n",
+      "total invalid values after interpolation with <src.parcels_utils.SurfaceGrid object at 0x7ff01b6a0950>: 5482\n",
       "    values filled: 27362\n",
       "total invalid values on interpolated: 5482\n",
       "Filling 121 fields...\n",
@@ -225,8 +225,8 @@
    ],
    "source": [
     "gapfiller = Gapfiller.load_from_config(*ocean_cfg.get(\"gapfill_steps\", []))\n",
-    "ds3 = gapfiller.execute(HFRGrid(ds))\n",
-    "grid3 = HFRGrid(ds3)\n",
+    "ds3 = gapfiller.execute(SurfaceGrid(ds))\n",
+    "grid3 = SurfaceGrid(ds3)\n",
     "sim3 = ParcelsSimulation(\"filledsmoothed\", grid3, cfg[\"parcels_config\"])\n",
     "sim3.pset.show(field=\"vector\",domain=domain)"
    ]
