--- a/load_coastline_into_field.ipynb
+++ b/load_coastline_into_field.ipynb
@@ -17,7 +17,7 @@
     "from shapely.ops import nearest_points\n",
     "\n",
     "import src.utils as utils\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid\n",
     "from src.thredds_utils import rename_dataset_vars"
    ]
   },
