--- a/run_mwbGS.ipynb
+++ b/run_mwbGS.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from src.parcels_utils import xr_dataset_to_fieldset, HFRGrid, read_netcdf_info\n",
+    "from src.parcels_utils import xr_dataset_to_fieldset, SurfaceGrid, read_netcdf_info\n",
     "from src.constants import *\n",
     "\n",
     "from src.parcels_sim import ParcelsSimulation\n",
@@ -124,7 +124,7 @@
     "grids = []\n",
     "for cfg in loaded_configs:\n",
     "    ds = read_netcdf_info(cfg[\"netcdf_data\"][\"ocean\"])\n",
-    "    grids.append(HFRGrid(ds))\n",
+    "    grids.append(SurfaceGrid(ds))\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
