--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -211,11 +211,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0eba6c4b74a2f8ee4f11000f0a8df2ef42b87fd4ae75b12d527f1b8c08aad6c6"
-  },
   "kernelspec": {
-   "display_name": "py3-parcels",
+   "display_name": "Python 3.7.10 ('py3-parcels')",
    "language": "python",
    "name": "python3"
   },
@@ -230,6 +227,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92c0155ff973c51285fb1dc8e256afac5e3dbdefb05174b825f6699ebdf3a9c7"
+   }
   }
  },
  "nbformat": 4,
